// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QR test generate should work 1`] = `
Object {
  "data": Array [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    0,
    212,
    0,
    0,
    0,
    212,
    8,
    6,
    0,
    0,
    0,
    228,
    222,
    13,
    24,
    0,
    0,
    0,
    6,
    98,
    75,
    71,
    68,
    0,
    255,
    0,
    255,
    0,
    255,
    160,
    189,
    167,
    147,
    0,
    0,
    9,
    88,
    73,
    68,
    65,
    84,
    120,
    156,
    237,
    221,
    49,
    142,
    83,
    73,
    16,
    198,
    241,
    246,
    202,
    32,
    32,
    70,
    68,
    48,
    1,
    220,
    129,
    132,
    19,
    16,
    113,
    10,
    98,
    206,
    196,
    21,
    56,
    6,
    41,
    18,
    68,
    38,
    24,
    200,
    8,
    136,
    16,
    9,
    210,
    108,
    128,
    216,
    93,
    250,
    141,
    167,
    166,
    166,
    190,
    170,
    106,
    179,
    255,
    159,
    52,
    9,
    246,
    116,
    191,
    177,
    93,
    244,
    43,
    119,
    119,
    245,
    110,
    140,
    113,
    49,
    10,
    93,
    92,
    104,
    187,
    219,
    237,
    118,
    169,
    253,
    121,
    219,
    143,
    62,
    63,
    250,
    184,
    213,
    223,
    204,
    106,
    95,
    77,
    253,
    250,
    68,
    251,
    83,
    251,
    171,
    180,
    55,
    224,
    15,
    71,
    64,
    1,
    66,
    4,
    20,
    32,
    180,
    159,
    255,
    161,
    58,
    199,
    241,
    254,
    190,
    117,
    125,
    213,
    57,
    141,
    37,
    122,
    189,
    217,
    57,
    147,
    247,
    113,
    171,
    63,
    235,
    250,
    213,
    57,
    173,
    183,
    189,
    236,
    207,
    55,
    35,
    20,
    32,
    68,
    64,
    1,
    66,
    4,
    20,
    32,
    180,
    201,
    161,
    102,
    234,
    156,
    193,
    43,
    58,
    239,
    160,
    206,
    169,
    172,
    254,
    188,
    143,
    91,
    253,
    91,
    143,
    207,
    237,
    103,
    207,
    75,
    101,
    231,
    112,
    86,
    206,
    165,
    158,
    87,
    82,
    191,
    63,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    144,
    153,
    67,
    117,
    235,
    94,
    75,
    215,
    157,
    115,
    68,
    251,
    171,
    94,
    203,
    183,
    218,
    188,
    97,
    53,
    70,
    40,
    64,
    136,
    128,
    2,
    132,
    8,
    40,
    64,
    104,
    185,
    28,
    74,
    157,
    51,
    89,
    162,
    247,
    240,
    209,
    181,
    120,
    234,
    181,
    142,
    222,
    199,
    163,
    107,
    225,
    212,
    251,
    185,
    178,
    115,
    208,
    108,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    144,
    153,
    67,
    117,
    215,
    24,
    240,
    62,
    63,
    59,
    39,
    202,
    174,
    81,
    160,
    174,
    153,
    144,
    189,
    22,
    174,
    123,
    237,
    99,
    148,
    250,
    243,
    205,
    8,
    5,
    8,
    17,
    80,
    128,
    16,
    1,
    5,
    8,
    109,
    114,
    168,
    234,
    123,
    216,
    89,
    117,
    141,
    7,
    245,
    218,
    51,
    245,
    245,
    175,
    118,
    125,
    221,
    143,
    207,
    162,
    107,
    23,
    213,
    24,
    161,
    0,
    33,
    2,
    10,
    16,
    34,
    160,
    0,
    161,
    221,
    197,
    98,
    139,
    161,
    186,
    247,
    231,
    88,
    191,
    63,
    235,
    94,
    155,
    150,
    189,
    31,
    168,
    122,
    63,
    154,
    215,
    98,
    31,
    95,
    70,
    40,
    64,
    137,
    128,
    2,
    132,
    8,
    40,
    64,
    104,
    55,
    166,
    243,
    161,
    170,
    107,
    40,
    84,
    223,
    67,
    87,
    239,
    175,
    233,
    158,
    215,
    235,
    166,
    158,
    151,
    178,
    100,
    183,
    111,
    97,
    132,
    2,
    132,
    8,
    40,
    64,
    136,
    128,
    2,
    132,
    246,
    234,
    186,
    110,
    179,
    234,
    26,
    1,
    217,
    57,
    75,
    247,
    218,
    181,
    236,
    28,
    215,
    234,
    79,
    189,
    127,
    205,
    171,
    251,
    253,
    181,
    48,
    66,
    1,
    66,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    233,
    107,
    249,
    186,
    107,
    147,
    91,
    186,
    107,
    50,
    68,
    85,
    231,
    96,
    214,
    243,
    45,
    171,
    245,
    175,
    254,
    188,
    49,
    66,
    1,
    66,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    155,
    28,
    42,
    187,
    70,
    67,
    247,
    121,
    73,
    222,
    254,
    178,
    115,
    186,
    213,
    215,
    22,
    86,
    215,
    248,
    152,
    85,
    191,
    158,
    209,
    254,
    24,
    161,
    0,
    33,
    2,
    10,
    16,
    34,
    160,
    0,
    161,
    189,
    122,
    127,
    200,
    106,
    243,
    54,
    234,
    121,
    169,
    232,
    243,
    189,
    86,
    91,
    43,
    233,
    173,
    11,
    56,
    171,
    94,
    219,
    87,
    125,
    6,
    49,
    35,
    20,
    32,
    68,
    64,
    1,
    66,
    4,
    20,
    32,
    36,
    95,
    203,
    183,
    218,
    126,
    170,
    234,
    253,
    63,
    217,
    53,
    20,
    178,
    231,
    121,
    172,
    223,
    207,
    158,
    215,
    243,
    182,
    103,
    181,
    95,
    61,
    143,
    199,
    8,
    5,
    8,
    17,
    80,
    128,
    16,
    1,
    5,
    8,
    185,
    215,
    242,
    85,
    223,
    211,
    102,
    95,
    143,
    87,
    245,
    218,
    191,
    238,
    181,
    105,
    81,
    221,
    127,
    111,
    246,
    245,
    204,
    24,
    161,
    0,
    33,
    2,
    10,
    16,
    34,
    160,
    0,
    161,
    205,
    25,
    187,
    179,
    238,
    123,
    86,
    117,
    142,
    224,
    85,
    189,
    159,
    169,
    58,
    103,
    242,
    58,
    181,
    121,
    161,
    234,
    253,
    92,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    208,
    102,
    63,
    148,
    151,
    117,
    15,
    26,
    189,
    103,
    85,
    231,
    40,
    222,
    28,
    36,
    251,
    188,
    162,
    168,
    213,
    107,
    46,
    68,
    117,
    215,
    109,
    180,
    218,
    159,
    49,
    66,
    1,
    66,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    230,
    126,
    168,
    238,
    121,
    150,
    213,
    206,
    59,
    138,
    182,
    151,
    157,
    115,
    204,
    170,
    207,
    48,
    246,
    246,
    223,
    93,
    151,
    79,
    157,
    99,
    49,
    66,
    1,
    66,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    230,
    60,
    148,
    250,
    140,
    213,
    234,
    28,
    194,
    91,
    71,
    174,
    187,
    198,
    197,
    234,
    181,
    210,
    79,
    45,
    39,
    139,
    94,
    47,
    251,
    161,
    128,
    70,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    155,
    253,
    80,
    234,
    218,
    213,
    217,
    103,
    226,
    118,
    175,
    173,
    171,
    158,
    23,
    83,
    231,
    4,
    222,
    247,
    39,
    123,
    222,
    168,
    58,
    231,
    85,
    231,
    92,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    144,
    89,
    83,
    98,
    166,
    190,
    71,
    86,
    231,
    52,
    217,
    215,
    103,
    253,
    190,
    215,
    106,
    117,
    7,
    163,
    237,
    69,
    247,
    167,
    85,
    215,
    110,
    143,
    182,
    63,
    99,
    132,
    2,
    132,
    8,
    40,
    64,
    136,
    128,
    2,
    132,
    246,
    213,
    107,
    211,
    178,
    157,
    218,
    121,
    82,
    94,
    217,
    57,
    167,
    87,
    117,
    13,
    7,
    245,
    188,
    149,
    186,
    214,
    58,
    35,
    20,
    32,
    228,
    254,
    150,
    15,
    215,
    115,
    236,
    127,
    206,
    238,
    83,
    216,
    127,
    201,
    30,
    73,
    255,
    175,
    24,
    161,
    0,
    33,
    243,
    124,
    168,
    234,
    154,
    17,
    81,
    217,
    243,
    98,
    222,
    215,
    231,
    199,
    143,
    31,
    227,
    252,
    252,
    252,
    202,
    231,
    84,
    57,
    59,
    59,
    27,
    251,
    253,
    207,
    155,
    146,
    95,
    127,
    71,
    247,
    254,
    164,
    213,
    206,
    228,
    245,
    182,
    63,
    255,
    62,
    183,
    124,
    201,
    206,
    207,
    207,
    199,
    147,
    39,
    79,
    186,
    47,
    99,
    140,
    49,
    198,
    225,
    112,
    24,
    143,
    31,
    63,
    238,
    190,
    140,
    63,
    26,
    183,
    124,
    128,
    16,
    1,
    5,
    8,
    133,
    107,
    155,
    87,
    223,
    19,
    119,
    215,
    180,
    200,
    158,
    119,
    169,
    242,
    235,
    58,
    171,
    215,
    186,
    101,
    175,
    173,
    180,
    218,
    179,
    174,
    39,
    186,
    118,
    147,
    17,
    10,
    16,
    34,
    160,
    22,
    245,
    244,
    233,
    211,
    241,
    229,
    203,
    151,
    75,
    127,
    94,
    190,
    124,
    217,
    125,
    121,
    56,
    130,
    111,
    249,
    22,
    117,
    235,
    214,
    173,
    113,
    255,
    254,
    253,
    75,
    31,
    187,
    119,
    239,
    94,
    241,
    213,
    224,
    186,
    204,
    128,
    82,
    223,
    179,
    90,
    178,
    115,
    38,
    245,
    188,
    201,
    177,
    231,
    159,
    74,
    46,
    229,
    181,
    122,
    13,
    141,
    234,
    28,
    123,
    254,
    125,
    110,
    249,
    0,
    33,
    2,
    10,
    16,
    34,
    160,
    0,
    33,
    247,
    126,
    40,
    75,
    247,
    218,
    63,
    245,
    188,
    136,
    229,
    84,
    231,
    161,
    174,
    155,
    235,
    85,
    239,
    119,
    203,
    174,
    49,
    49,
    83,
    231,
    104,
    124,
    203,
    215,
    100,
    183,
    219,
    141,
    187,
    119,
    239,
    30,
    125,
    252,
    206,
    157,
    59,
    71,
    31,
    187,
    125,
    251,
    246,
    149,
    223,
    244,
    125,
    255,
    254,
    253,
    100,
    2,
    251,
    79,
    99,
    174,
    54,
    247,
    202,
    174,
    228,
    218,
    125,
    34,
    158,
    247,
    91,
    192,
    143,
    31,
    63,
    94,
    186,
    56,
    246,
    225,
    195,
    135,
    227,
    211,
    167,
    79,
    87,
    246,
    125,
    83,
    143,
    30,
    61,
    26,
    159,
    63,
    127,
    222,
    252,
    251,
    127,
    23,
    199,
    222,
    116,
    132,
    170,
    62,
    197,
    190,
    122,
    132,
    138,
    126,
    254,
    200,
    161,
    0,
    33,
    119,
    109,
    243,
    236,
    239,
    249,
    179,
    239,
    217,
    171,
    215,
    146,
    173,
    234,
    216,
    235,
    160,
    158,
    23,
    82,
    207,
    59,
    69,
    219,
    203,
    94,
    203,
    201,
    8,
    5,
    8,
    17,
    80,
    128,
    16,
    1,
    5,
    8,
    185,
    215,
    242,
    117,
    215,
    229,
    203,
    174,
    121,
    225,
    237,
    239,
    88,
    157,
    55,
    235,
    186,
    190,
    125,
    251,
    54,
    94,
    191,
    126,
    125,
    244,
    241,
    7,
    15,
    30,
    140,
    231,
    207,
    159,
    95,
    250,
    216,
    219,
    183,
    111,
    199,
    135,
    15,
    31,
    174,
    108,
    59,
    75,
    245,
    183,
    104,
    217,
    57,
    179,
    151,
    249,
    249,
    185,
    48,
    140,
    49,
    126,
    251,
    241,
    62,
    238,
    109,
    223,
    251,
    211,
    221,
    159,
    245,
    188,
    195,
    225,
    112,
    163,
    126,
    158,
    61,
    123,
    118,
    244,
    111,
    120,
    245,
    234,
    213,
    141,
    218,
    60,
    28,
    14,
    225,
    215,
    39,
    250,
    122,
    119,
    63,
    95,
    221,
    223,
    252,
    195,
    45,
    31,
    32,
    68,
    64,
    1,
    66,
    102,
    77,
    137,
    139,
    230,
    243,
    137,
    230,
    254,
    87,
    159,
    7,
    242,
    190,
    94,
    93,
    174,
    251,
    58,
    90,
    175,
    127,
    244,
    253,
    81,
    207,
    35,
    85,
    159,
    215,
    197,
    60,
    20,
    144,
    136,
    128,
    2,
    132,
    8,
    40,
    64,
    104,
    179,
    31,
    74,
    45,
    154,
    131,
    101,
    175,
    5,
    140,
    230,
    144,
    199,
    218,
    139,
    190,
    174,
    239,
    223,
    191,
    31,
    47,
    94,
    188,
    184,
    244,
    177,
    119,
    239,
    222,
    133,
    218,
    30,
    227,
    223,
    235,
    139,
    158,
    183,
    100,
    61,
    110,
    189,
    159,
    222,
    246,
    187,
    119,
    27,
    88,
    253,
    177,
    31,
    106,
    81,
    95,
    191,
    126,
    29,
    111,
    222,
    188,
    233,
    190,
    12,
    56,
    113,
    203,
    7,
    8,
    17,
    80,
    128,
    208,
    230,
    150,
    79,
    125,
    126,
    146,
    122,
    222,
    232,
    166,
    117,
    242,
    174,
    75,
    157,
    99,
    157,
    154,
    236,
    243,
    158,
    188,
    175,
    111,
    244,
    243,
    102,
    125,
    62,
    188,
    216,
    177,
    11,
    20,
    34,
    160,
    0,
    33,
    190,
    229,
    75,
    118,
    118,
    118,
    54,
    14,
    135,
    67,
    247,
    101,
    140,
    49,
    126,
    94,
    11,
    114,
    237,
    198,
    207,
    101,
    231,
    255,
    80,
    127,
    143,
    95,
    45,
    187,
    106,
    19,
    57,
    213,
    239,
    212,
    107,
    61,
    163,
    57,
    123,
    118,
    14,
    205,
    90,
    62,
    160,
    16,
    183,
    124,
    201,
    178,
    87,
    6,
    88,
    237,
    173,
    126,
    71,
    241,
    167,
    97,
    132,
    2,
    132,
    204,
    121,
    168,
    89,
    247,
    61,
    106,
    116,
    158,
    35,
    58,
    15,
    98,
    245,
    23,
    21,
    125,
    253,
    179,
    107,
    56,
    68,
    219,
    139,
    142,
    200,
    209,
    17,
    55,
    122,
    253,
    214,
    227,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    144,
    57,
    15,
    165,
    206,
    113,
    188,
    170,
    231,
    45,
    172,
    254,
    179,
    215,
    130,
    205,
    212,
    215,
    111,
    181,
    111,
    201,
    174,
    253,
    158,
    93,
    51,
    194,
    234,
    47,
    250,
    126,
    51,
    66,
    1,
    66,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    225,
    154,
    18,
    217,
    51,
    253,
    214,
    227,
    234,
    121,
    166,
    236,
    156,
    164,
    58,
    71,
    176,
    250,
    239,
    94,
    201,
    97,
    233,
    206,
    225,
    189,
    24,
    161,
    0,
    33,
    2,
    10,
    16,
    34,
    160,
    0,
    161,
    205,
    60,
    148,
    90,
    117,
    109,
    244,
    238,
    121,
    162,
    168,
    238,
    121,
    61,
    175,
    238,
    253,
    75,
    234,
    235,
    177,
    218,
    155,
    177,
    31,
    10,
    72,
    68,
    64,
    1,
    66,
    4,
    20,
    32,
    180,
    187,
    152,
    110,
    18,
    171,
    231,
    37,
    172,
    246,
    179,
    247,
    35,
    173,
    214,
    126,
    117,
    14,
    151,
    157,
    243,
    168,
    159,
    223,
    221,
    191,
    245,
    124,
    70,
    40,
    64,
    136,
    128,
    2,
    132,
    8,
    40,
    64,
    104,
    147,
    67,
    109,
    158,
    176,
    88,
    29,
    186,
    234,
    26,
    22,
    209,
    246,
    102,
    167,
    150,
    179,
    88,
    178,
    207,
    99,
    82,
    191,
    158,
    81,
    212,
    229,
    3,
    10,
    17,
    80,
    128,
    16,
    1,
    5,
    8,
    165,
    231,
    80,
    221,
    53,
    28,
    44,
    213,
    103,
    248,
    102,
    215,
    136,
    136,
    90,
    109,
    30,
    48,
    170,
    250,
    243,
    198,
    8,
    5,
    8,
    17,
    80,
    128,
    16,
    1,
    5,
    8,
    153,
    107,
    249,
    186,
    235,
    236,
    169,
    219,
    203,
    62,
    79,
    40,
    170,
    122,
    63,
    144,
    213,
    127,
    247,
    235,
    183,
    218,
    188,
    152,
    213,
    31,
    35,
    20,
    32,
    68,
    64,
    1,
    66,
    4,
    20,
    32,
    228,
    62,
    99,
    119,
    211,
    64,
    241,
    61,
    110,
    245,
    188,
    86,
    117,
    221,
    185,
    236,
    246,
    172,
    246,
    187,
    115,
    174,
    238,
    181,
    139,
    209,
    156,
    144,
    17,
    10,
    16,
    34,
    160,
    0,
    33,
    2,
    10,
    16,
    50,
    215,
    242,
    153,
    13,
    52,
    231,
    52,
    217,
    191,
    127,
    106,
    103,
    236,
    90,
    207,
    183,
    250,
    59,
    245,
    26,
    29,
    86,
    127,
    217,
    57,
    31,
    35,
    20,
    32,
    68,
    64,
    1,
    66,
    4,
    20,
    32,
    100,
    214,
    54,
    207,
    222,
    163,
    111,
    245,
    55,
    171,
    94,
    43,
    214,
    189,
    63,
    168,
    250,
    12,
    219,
    213,
    174,
    39,
    187,
    38,
    134,
    151,
    117,
    189,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    208,
    230,
    140,
    221,
    249,
    30,
    180,
    123,
    127,
    148,
    250,
    12,
    93,
    181,
    234,
    123,
    120,
    111,
    255,
    221,
    103,
    218,
    158,
    218,
    25,
    185,
    51,
    230,
    161,
    128,
    70,
    4,
    20,
    32,
    68,
    64,
    1,
    66,
    251,
    249,
    31,
    170,
    247,
    228,
    71,
    159,
    239,
    213,
    189,
    118,
    79,
    157,
    3,
    102,
    191,
    190,
    221,
    243,
    80,
    214,
    243,
    87,
    203,
    89,
    25,
    161,
    0,
    33,
    2,
    10,
    16,
    34,
    160,
    0,
    161,
    240,
    126,
    168,
    240,
    5,
    36,
    159,
    223,
    163,
    238,
    127,
    181,
    253,
    72,
    221,
    107,
    27,
    173,
    223,
    95,
    237,
    188,
    170,
    153,
    58,
    103,
    102,
    132,
    2,
    132,
    8,
    40,
    64,
    136,
    128,
    2,
    132,
    246,
    221,
    223,
    227,
    171,
    239,
    121,
    213,
    247,
    196,
    214,
    243,
    179,
    215,
    66,
    102,
    215,
    124,
    136,
    254,
    125,
    234,
    254,
    212,
    162,
    127,
    175,
    183,
    125,
    70,
    40,
    64,
    136,
    128,
    2,
    132,
    8,
    40,
    64,
    200,
    189,
    150,
    207,
    75,
    189,
    223,
    169,
    186,
    174,
    91,
    117,
    93,
    190,
    104,
    251,
    222,
    121,
    34,
    245,
    188,
    145,
    165,
    58,
    167,
    170,
    158,
    215,
    99,
    132,
    2,
    132,
    8,
    40,
    64,
    136,
    128,
    2,
    132,
    54,
    57,
    212,
    44,
    123,
    45,
    85,
    119,
    173,
    107,
    171,
    61,
    239,
    60,
    147,
    183,
    63,
    171,
    255,
    168,
    234,
    121,
    57,
    171,
    127,
    111,
    142,
    28,
    205,
    9,
    189,
    162,
    57,
    60,
    35,
    20,
    32,
    68,
    64,
    1,
    66,
    4,
    20,
    32,
    100,
    230,
    80,
    217,
    212,
    103,
    162,
    70,
    251,
    179,
    68,
    107,
    66,
    168,
    215,
    50,
    102,
    215,
    205,
    203,
    222,
    255,
    21,
    181,
    218,
    254,
    41,
    70,
    40,
    64,
    136,
    128,
    2,
    132,
    8,
    40,
    64,
    168,
    61,
    135,
    82,
    239,
    39,
    170,
    174,
    177,
    80,
    221,
    94,
    118,
    109,
    247,
    234,
    28,
    71,
    93,
    115,
    162,
    251,
    253,
    100,
    132,
    2,
    132,
    8,
    40,
    64,
    136,
    128,
    2,
    132,
    204,
    28,
    170,
    186,
    6,
    128,
    58,
    167,
    170,
    110,
    111,
    86,
    93,
    135,
    238,
    212,
    106,
    56,
    204,
    162,
    239,
    87,
    118,
    205,
    11,
    206,
    135,
    2,
    10,
    17,
    80,
    128,
    16,
    1,
    5,
    8,
    109,
    114,
    168,
    234,
    58,
    125,
    209,
    28,
    163,
    123,
    94,
    195,
    75,
    189,
    22,
    208,
    210,
    93,
    19,
    35,
    187,
    191,
    236,
    215,
    199,
    27,
    15,
    140,
    80,
    128,
    16,
    1,
    5,
    8,
    17,
    80,
    128,
    208,
    223,
    26,
    111,
    37,
    75,
    66,
    17,
    96,
    38,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`QR test generateQRCodeContent should work 1`] = `
"SPC
0200
1
CH2830000011623852950
K
bbit gmbh
Rainweg 10
3612 Steffisburg


CH







100.00
CHF
S
Test AG
Musterstrasse
1
3600
Thun
CH
QRR
000000000000000012312312316
Test message
EPD

"
`;

exports[`QR test generateQRCodeContent should work 2`] = `
"SPC
0200
1
CH2830000011623852950
S
Test AG
Musterstrasse
1
3600
Thun
CH







100.00
CHF
K
bbit gmbh
Rainweg 10
3612 Steffisburg


CH
QRR
000000000000000012312312316
Test message
EPD

"
`;

exports[`QR test generateQRCodeContent should work 3`] = `
"SPC
0200
1
CH2830000011623852950
K
bbit gmbh
Rainweg 10
3612 Steffisburg


CH







100.00
CHF
S
Test AG
Musterstrasse
1
3600
Thun
CH
QRR
000000000000000012312312316

EPD

"
`;
